# merge-corrected-sft-distillation-Qwen-Mythos-0.8B

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  eval_ppl.py  eval_qa.py  merge.py  prepare_data.py  publish_hub.py  pyproject.toml  requirements.txt  sft_worker.py  train_cpt.py  train_distill.py  tune.py
aero_cpt/: __init__.py  config.py  data.py  utils.py
configs/: accelerate.yaml  accelerate_multi.yaml  cpt.yaml  merge_dare_ties.yaml  merge_ties.yaml  sft.yaml
distill/: __init__.py  config.py  data.py  eval_bench.py  merge.py  recipe.py  tracking.py  utils.py
results/: REPORT.md  benchmarks.md  benchmarks_mm.md  confirm_stderr.json  loss_trajectory.json
scripts/: make_figures.py  run_all.sh  train_cpt.sh
tests/: test_config.py  test_data.py  test_merge.py  test_recipe.py  test_tracking.py  test_utils.py
