[project]
name = "merge-corrected-sft-distillation"
version = "0.1.0"
description = "Reasoning distillation into Qwen3.5-0.8B via merge-corrected iterative SFT (SFT vs SFT+merge across LLM benchmarks)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Runtime stack. Kept in sync with requirements.txt (pip path documented in README).
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.50.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "trl>=1.0.0",                 # SFTTrainer
    "lm-eval>=0.4.0",             # EleutherAI lm-evaluation-harness (GSM8K/MMLU/ARC)
    "peft>=0.13.0",               # LoRA fallback
    "huggingface_hub>=0.25.0",
    "mlflow>=3.0.0",              # tracking client; match the running server (3.14.0)
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
# This is an application/research repo, not a distributable library: don't build
# or install the project root into the env. uv manages deps only.
package = false

[tool.pytest.ini_options]
# `from distill...` resolves from the repo root; tests live in tests/.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
